# platoon-gnu-radio

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: platoonConfig.cmake
docs/: README.platoon
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  platoon_receiver.xml  platoon_transmitter.xml
include/platoon/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_platoon.cc  qa_platoon.h  test_platoon.cc
python/: CMakeLists.txt  __init__.py  qa_receiver.py  qa_transmitter.py  receiver.py  transmitter.py
swig/: CMakeLists.txt  platoon_swig.i
